regression fix bootstrap3theme sample theme some labels are invisible

--- a/themes/bootstrap3theme/less/bootstraptheme.less
+++ b/themes/bootstrap3theme/less/bootstraptheme.less
@@ -251,3 +251,7 @@ ul#controls.controls {
     left: 20px!important;
 	right: inherit!important;
 }
+
+.label label{
+	color: black;
+}
